add remote cmd execution
